Fix images- css - column spacing

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin-top: 10px;
     min-height: 300px;
     background-size: cover;
-    background-color: #337ab7;
+    background-color: #444647;
     padding-top:0;
     text-align: left;
     color: white;
@@ -21,7 +21,7 @@
   .about {
     font-size: 18px;
     font-family: Arial;
-    color: rgb(0, 0, 0);
+    color: #444647;
     line-height: 1.7;
     text-align: justify;
     text-justify: inter-word;
@@ -42,7 +42,7 @@
 body {
     font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
-    background-image:url(static/img/bacteria1.png);
+    background-image:url(static/img/greenBacteria.jpeg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -56,18 +56,18 @@ body {
     font-family: Arial;
     color: rgb(255, 255, 255);
     margin-top: 0px;
-    background-color: rgb(0, 0, 0);
+    background-color: #444647;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 20px;
     width: 1170px;
   }
 
-  /* About Deshboard */
-  .aboutdeshboard {
+  /* About Dashboard */
+  .aboutdashboard {
     font-size: 18px;
     font-family: Arial;
-    color: rgb(0, 0, 0);
+    color: #444647;
     line-height: 1.7;
     background-color: rgb(255, 255, 255);
     text-align: justify;
@@ -113,7 +113,7 @@ body {
 
   .panel-primary>.panel-heading {
     height: 55px;
-    background-color: #337ab7;
+    background-color: #444647;
     border-bottom-color: rgb(255, 255, 255);
     text-align: center;
     padding: 15px;
@@ -132,7 +132,7 @@ body {
     font-family: Arial;
     font-size: 15px;
     height: 320px;
-    width: 170px;
+    width: 300px;
     line-height: 1.5;
     font-weight: 400;
     color: rgb(0, 0, 0);
@@ -175,13 +175,13 @@ body {
     bottom: 0;
     left: 0;
     padding: 15px;
-    background: rgb(240, 240, 240);
+    background: #444647;
     font-size: 15px;
-    color: black;
+    color:white ;
     font-family: Arial;
     text-align: center;
   }
 
   .footcolor {
-    color: rgb(133, 133, 133);
+    color: white;
   }
